# MemVim-AD

./: .gitignore  data  processed-ad  pyproject.toml
models/logs/: events.out.tfevents.1757236493.server-4090.1053983.0  events.out.tfevents.1757236698.server-4090.1056158.0
src/pro_ad/: ape.py  loss_func.py  new_trainer.py  rich_logging.py  runner.py  test.py  test2.py  test_json_dataset.py  test_mamba.py  trainer.py  trainer_updated.py
src/pro_ad/logging/: __init__.py
src/pro_ad/model/: __init__.py  anomaly_score.py  decoder.py  embed_space.py  gating_mech.py  hierarchy_proto.py  mamba_model.py  memory.py  memvim.py
src/pro_ad/mvtec_data/: __init__.py  dataset.py  load_dataset.py  multi_cls_loader.py
