[project]
name = "pro-ad"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "einops>=0.8.1",
    "logging>=0.4.9.6",
    "numpy>=2.3.1",
    "opencv-python>=4.11.0.86",
    "rich>=14.0.0",
    "ruff>=0.12.3",
    "scikit-learn>=1.7.0",
    "tensorboard>=2.20.0",
    "timm>=1.0.19",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "transformers>=4.54.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[dependency-groups]
dev = [
    "ruff>=0.12.3",
]
